--- a/style/movingBall.css
+++ b/style/movingBall.css
@@ -14,7 +14,7 @@ body {
     text-align: center;
     height: 25px;
     padding-top: 5px;
-    
+
     margin-top: 3px;
 }
 
@@ -36,8 +36,8 @@ body {
     width:100%;
     text-align: center;
     height: 25px;
-    
-    margin-bottom: 3px;
+
+    margin-bottom: 25px;
 }
 
 /*                            #fullscreenButton {
@@ -49,3 +49,50 @@ body {
                                 font-size: 22px;
                                 color: #ff0000;
                             }*/
+
+@media only screen 
+and (max-width : 320px) {
+    /* Styles */
+
+    body {
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+        background-color: #d3d3d3;
+    }
+
+    #header {
+        background-color: #A4C639;
+        border: 1px solid black;
+        position: absolute;
+        top: 0;
+        width:100%;
+        text-align: center;
+        height: 25px;
+        padding-top: 5px;
+
+        margin-top: 3px;
+    }
+
+    #border {
+        position: absolute;
+        margin-top: 42px;
+        min-width: 320px;
+        min-height: 400px;
+        border: 1px solid black;
+        background-color: #f1f6e1;
+        z-index: -1;
+    }
+
+    #nav{
+        background-color: #A4C639;
+        border: 1px solid #272f3c;
+        position: absolute;
+        bottom:0;
+        width:100%;
+        text-align: center;
+        height: 25px;
+
+        margin-bottom: 25px;
+    }
+}
